--- a/src/paginas/cadastroUsuario/CadastroUsuario.css
+++ b/src/paginas/cadastroUsuario/CadastroUsuario.css
@@ -1,5 +1,5 @@
-    .imagem2{
-    background-image: url(https://i.imgur.com/t2aqyYA.jpg);
+.imagem2{
+    background-image: url(https://i.imgur.com/d5bMdDJ.jpg);
     background-repeat: no-repeat;
     width: 100vh;
     min-height: 100vh;
@@ -13,7 +13,4 @@
 
 .btnCancelar{
     margin-right: 20px !important;
-    background-color: aliceblue !important;
-    border-color: #424242 !important;
-    color: #424242 !important;
 }
