--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,18 +1,22 @@
 .caixa{
-    background-color: #34495e;
+    background-color: #3F51B5;
 }
 
 .titulo{
-    color: white!important;
-    font-weight: bold!important;
+   color: white !important;
+   font-weight: bold !important;
 }
 
 .botao{
-    border-color: white!important;
-    background-color: #34495e;
-    color: white!important;
+    border-color: white !important;
+    background-color: #3F51B5;
+    color: white !important;
 }
 
 .postagens{
     background-color: white;
+}
+
+.text-decorator-none{
+    text-decoration: none;
 }
