--- a/src/components/estaticos/navbar/Navbar.css
+++ b/src/components/estaticos/navbar/Navbar.css
@@ -1,6 +1,7 @@
 .header{
     background-color: #95a5a6 !important;
     transition: 1.2s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
+    opacity: 0.7;
 }
 
 .tooHeader{
