--- a/src/paginas/homeCont/HomeCont.css
+++ b/src/paginas/homeCont/HomeCont.css
@@ -1,9 +1,38 @@
 @import url(https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap%27);
 
-.homeBase{
+.homeBase {
     background-color: #2c3e50;
 }
 
-.font2{
-font-family: 'Source Sans Pro', sans-serif;
+.font2 {
+    font-family: 'Source Sans Pro', sans-serif;
+    text-decoration: none;
+}
+
+.content-group a::before {
+    content: '' !important;
+    display: block !important;
+    width: 300px !important;
+    height: 150px !important;
+    opacity: 0.7 !important;
+    position: absolute !important;
+    transition: 0.5s ease !important;
+    border-radius: 5%;
+}
+
+.content-group a {
+    display: block !important;
+    height: auto !important;
+    position: relative !important;
+    transition: 0.5s ease !important;
+    border-radius: 5%;
+}
+
+.content-group a:hover {
+    transform: scale(1.05);
+    border-radius: 5%;
+}
+
+.content-group a:hover::before {
+    opacity: 0;
 }
