--- a/src/paginas/home/Home.css
+++ b/src/paginas/home/Home.css
@@ -1,26 +1,30 @@
 @import url(https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap%27);
 
 :root {
-    --main-bg-blue: #2c3e50;
+    --main-bg-blue: #192a56;
     --main-bg-grey: #95a5a6;
 }
 
-.bot {
-    text-decoration: none;
-    border-color: #fafafa;
-    background: #fafafa !important;
-    color: #f99e29 !important;
-    padding-left: 7;
+.base  {
+   background-image: url(https://i.imgur.com/vwXcqeS.png);
+   background-size:cover;
+   justify-content: space-around;
+   flex-direction:column;
 }
 
 .bot2 {
     text-decoration: none;
-    border: 1px solid #424242 !important;
     border-radius: 8%;
-    background: var(--main-bg-grey) !important;
-    color: var(--main-bg-blue) !important;
+    background: #1e272e !important;
+    color: white !important;
     padding-left: 7px;
     padding-top: 4px;
+    transition: all 0.5s ease-in-out 0s;
+}
+.bot2:hover{
+    transform: scale(110%);
+    box-shadow: #86CEEB;
+    -webkit-box-shadow: 0.5px 0.5px 5px 3px #00ffea;
 }
 
 .text-decorator-none {
@@ -29,9 +33,4 @@
 
 .font {
     font-family: 'Source Sans Pro', sans-serif;
-}
-
-.teste {
-    display: flex !important;
-    justify-content: flex-end;
 }
