--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -560,66 +560,61 @@ about__title{
 } */
 
 /*=============== WORK ===============*/
-.work__container{
+.work__container {
   padding-top: 1rem;
 }
 
-.work__filters{
+.work__filters {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: .75rem;
+  column-gap: 0.75rem;
   margin-bottom: 2rem;
 }
 
-.work__item{
+.work__item {
   cursor: pointer;
   color: var(--title-color);
-  padding: .25rem .75rem;
+  padding: 0.25rem 0.75rem;
   font-weight: var(--font-medium);
-  border-radius: .5rem;
+  border-radius: 1rem;
 }
-
-.work__item{
+.work__card {
   background-color: var(--container-color);
   padding: 1rem;
   border-radius: 1rem;
-
 }
-
-.work__img{
+.work__img {
   border-radius: 1rem;
-  margin-bottom: .75rem; 
+  margin-bottom: 0.75rem;
 }
-
-.work__title{
+.work__title {
   font-size: var(--normal-font-size);
   font-weight: var(--font-medium);
-  margin-bottom: .75rem;
+  margin-bottom: 0.25rem;
 }
 
-.work__button{
+.work__button {
   width: max-content;
   color: var(--first-color);
   font-size: var(--small-font-size);
   display: flex;
   align-items: center;
-  column-gap: .25rem;
+  column-gap: 0.25rem;
 }
 
-.work__button:hover .work__icon{
-  transform: translateX(.25rem);
+.work__button:hover .work__icon {
+  transform: translateX(0.25rem);
 }
 
-.work__icon{
+.work__icon {
   font-size: 1rem;
-  transition: .4s;
+  transition: 0.4s;
 }
-
 /* Active item work*/
-.active-work{
+.active-work {
   background-color: var(--first-color);
-  color: var(--body-color); 
+  color: var(--body-color);
 }
 
 /*=============== TESTIMONIAL ===============*/
